Fixed blurry tooltip bug by setting animation to none

--- a/cgi-bin/core/style.css
+++ b/cgi-bin/core/style.css
@@ -18,3 +18,10 @@ display: none;
 .locus_button_style {
 	margin-left: 20px;
 }
+
+.mdl-tooltip.is-active {
+    animation: none;
+    transform: scale(1);
+    opacity: 1;
+    visibility: visible;
+}
